# SparkTestProject

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateVSProject.bat  README.md
app/: CMakeLists.txt
app/assets/: new_prefab.json
app/assets/materials/: MI_AmmunitionBoxes01_Body.json  MI_CorridorBigDoor01.json  MI_CorridorWall03.json  M_LitSingleTexture.json  cube2_mat.json  cube_mat.json  door.json
app/assets/models/Building/: SM_AboveWall.FBX  SM_AboveWallCorner.FBX  SM_CorridorBigDoor01.FBX  SM_CorridorBigDoor02.FBX  SM_CorridorColumn01.FBX  SM_CorridorDoor01.FBX  SM_CorridorDoor02_Body.FBX  SM_CorridorDoor02_DoorL.FBX  SM_CorridorDoor02_DoorR.FBX  SM_CorridorDoor03.FBX  SM_CorridorLight01.FBX  SM_CorridorRoof01.FBX  SM_CorridorRoofSet01.FBX  SM_CorridorRoofSet02.FBX  SM_CorridorRoofSet03.FBX  SM_CorridorRoofSet05.FBX  SM_CorridorStair.FBX  SM_CorridorStair01.FBX  SM_CorridorWall01.FBX  SM_CorridorWall02.FBX  SM_CorridorWall03.FBX  SM_CorridorWall03Door.FBX  SM_CorridorWall03_big.FBX  SM_CorridorWall03_bigCorner.FBX  SM_CorridorWall03_bigCorner02.FBX  SM_CorridorWall0Corner.FBX  SM_CorridorWall0Corner02.FBX  SM_Door01.FBX  SM_Door02.FBX  SM_FactoryWall01.FBX  SM_FactoryWall02.FBX  SM_FactoryWall02Corner.FBX  SM_HangarBigDoor.FBX  SM_HangarBigDoorFloor.FBX  SM_HangarBigDoorWall.FBX  SM_HangarBigDoorWallUp.FBX  SM_HangarBigWall.FBX  SM_HangarFloor01.FBX  SM_HangarRoof01.FBX  SM_HangarRoof02.FBX  (+34 more)
app/assets/models/Props/: '.FBX  SM_AmmunitionBoxes01_Closed.FBX  SM_AmmunitionBoxes01_Door.FBX  SM_AmmunitionBoxes02_Body.FBX  SM_AmmunitionBoxes02_Closed.FBX  SM_AmmunitionBoxes02_Door.FBX  SM_AmmunitionBoxes03_Body.FBX  SM_AmmunitionBoxes03_Closed.FBX  SM_AmmunitionBoxes03_Door.FBX  SM_ArtificialFloraDevice.FBX  SM_Bollard.FBX  SM_BulletBox_Style01.FBX  SM_BulletBox_Style02.FBX  SM_BulletBox_Style03.FBX  SM_BulletBox_Style04.FBX  SM_BulletCaseFull_Style01.FBX  SM_BulletCaseFull_Style02.FBX  SM_BulletCaseFull_Style03.FBX  SM_BulletCase_Body.FBX  SM_Canister01.FBX  SM_Canister02.FBX  SM_Canister03.FBX  SM_Cart.FBX  SM_ComputerStyle01.FBX  SM_ComputerStyle02.FBX  SM_Fan01.FBX  SM_Fan02.FBX  SM_HangarFloorAsset.FBX  SM_HangerRoofEquipment_01.FBX  SM_Lifter_Style01.FBX  SM_Lifter_Style02.FBX  SM_LightSource01.FBX  SM_LightSource02.FBX  SM_LightSource03.FBX  SM_LightSource04.FBX  SM_LightSource05.FBX  SM_LightSource06.FBX  SM_Light_Style02.FBX  SM_Light_Style03.FBX  SM_MagnetBed.FBX  (+25 more)
app/assets/scenes/: test_scene.json
app/assets/shaders/: hue.ssl  red.ssl
app/built/textures/: uvtemplate.sass
app/src/: CameraSystem.cpp  CameraSystem.h  FirstPersonCameraComponent.cpp  FirstPersonCameraComponent.h  FirstPersonCameraSystem.cpp  FirstPersonCameraSystem.h  ReactToButtonComponent.cpp  ReactToButtonComponent.h  RelationshipTestSystem.cpp  RelationshipTestSystem.h  Signals.h  TestApplication.cpp  TestApplication.h  TestButtonSystem.cpp  TestButtonSystem.h  TestComponent1.cpp  TestComponent1.h  TestComponent2.cpp  TestComponent2.h  TestObserver.cpp  TestObserver.h  TestSingletonComponent.cpp  TestSingletonComponent.h  TestSystem.cpp  TestSystem.h  UITestSystem.cpp  UITestSystem.h  main.cpp
app/src/components/: FirstPersonCameraComponent.h  RespondsToTestButtonComponent.h
app/src/singleton_components/: ButtonTestComponent.h
app/src/systems/: ButtonTestSystem.cpp  ButtonTestSystem.h  FirstPersonCameraSystem.cpp  FirstPersonCameraSystem.h  TestSystem.cpp  TestSystem.h
debug/gdb/: String.py  ecs_Id.py
